--- a/baskinrobbins/css/slideBanner.css
+++ b/baskinrobbins/css/slideBanner.css
@@ -9,6 +9,7 @@
     height: 679px;
     overflow: hidden;
     position: relative;
+    max-width: 100%;
 }
 
 .sl-banner>div {
@@ -16,6 +17,7 @@
     position: absolute;
     left: 0px;
     width: 100vw;
+    max-width: 100%;
     height: 679px;
     transform: translate(-100vw);
     background-position: center;
