--- a/brunch/css/style.css
+++ b/brunch/css/style.css
@@ -1,47 +1,144 @@
-*{
+* {
     font-family: 'Noto Sans KR', sans-serif;
 }
-body,html{
-    width:100%;
-    height:100%;
+
+body,
+html {
+    width: 100%;
+    height: 100%;
 }
-body{
-    height:8155px;
+
+body {
+    height: 8155px;
 }
+.clearfix::after {
+    content: '';
+    display: block;
+    clear: both;
+    float: none;
+}
+
 /* 상단 배너 */
-.top-banner{
-    margin-top:-420px;
-    width:100%;
-    height:480px;
+.top-banner {
+    margin-top: -420px;
+    width: 100%;
+    height: 480px;
     background-image: url(../img/top_banner_full_bg.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
 }
-.top-banner.close{
-    transition:all 1s;
-}
-.top-banner.open{
-    transition:all 0s;
-}
-.top-banner-full-text{
-    width:960px;
-    height:480px;
+
+.top-banner-full-text {
+    width: 960px;
+    height: 480px;
     margin: auto;
     background-image: url(../img/top_banner_full_text.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
 }
-.top-banner-text{
-    width:960px;
-    height:60px;
+
+.top-banner-text {
+    width: 960px;
+    height: 60px;
     margin: auto;
     background-image: url(../img/top_banner_text.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
     position: relative;
-    top:-60px;
-    transition:opacity 1s;
+    top: -60px;
+    transition: opacity 1s;
+}
+
+
+/* 상단 내비 */
+nav#top_nav {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* 상단 내비 좌측 */
+.nav-left {
+    width: 125px;
+    height: 22px;
+    margin-top: 19px;
+    margin-left: 30px;
+}
+
+.nav-left>* {
+    margin-right: 11px;
+    float: left;
+}
+
+.nav-left .nav-menu-btn {
+    width: 27px;
+    height: 20px;
+    border: none;
+    background-color: #00000000;
+    background-image: url(../img/icon2.png);
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size: 240px 300px;
+    margin-top: 1px;
+}
+
+.nav-left .top-logo {
+    width: 72px;
+    height: 22px;
+    background-image: url(../img/logo.png);
+}
+
+/* 상단 내비 우측 */
+.nav-right {
+    width: 134px;
+    height: 28px;
+}
+.nav-right>*{
+    
+    float:left;
+}
+.nav-right .nav-join {
+    color: #666;
+    border: 1px solid #959595;
+    background-color: #00000000;
+    border-radius: 16px;
+    width: 64px;
+    height: 28px;
+    font-size:12px;
+    padding:0;
+    box-sizing: content-box;
+    margin-top:9px;
+    margin-right:16px;
+    line-height: 28px;
+
+}
+.nav-right .nav-search {
+    border: none;
+    background-color: #00000000;
+    width: 22px;
+    height: 22px;
+    background-position: -30px 0px;
+    background-image: url(../img/icon2.png);
+    margin-top: 14px;
+
+}
+/* 좌측 사이드 내비 */
+nav#side_nav{
+    position: fixed;
+    border-right:solid 1px #ddd;
+    top:0;
+    left:-270px;
+    width:260px;
+    background-color: white;;
+    transition: left 0.3s;
+}
+nav#side_nav .side-nav-top{
+    height:239px;
+    background-color: #f8f8f8;
+    border-bottom:solid 1px #ddd;
 }
