--- a/starbucks/css/header.css
+++ b/starbucks/css/header.css
@@ -7,6 +7,7 @@ header {
     background-color: #f6f5ef;
     border-bottom: solid 1px white;
     border-top: solid 2px black;
+    z-index:999;
 }
 
 .h-wrap {
@@ -73,7 +74,7 @@ header {
 }
 
 .util-nav {
-    width: 700px;
+    width: 718px;
     margin-top: 7px;
     display: flex;
     margin-right: 0px;
@@ -135,7 +136,7 @@ header {
 .dropdown .d-main {
     width: 100%;
     height:0px;
-    font-family: 'NanumBarunGothic';
+    font-family: 'Nanum Barun Gothic';
 }
 
 .dropdown .d-main-inner {
@@ -219,11 +220,16 @@ header {
 }
 
 
-
-/*!!!!dropdown 각 메뉴 hover효과!!!!*/
-/* dropdown 1번 */
 .dropdown-nav>ul>li:hover {
     background-color: #2C2A29;
     text-decoration: underline;
     color: #669900;
+}
+
+
+
+.fixed_banner{
+    position:fixed;
+    right:245px;
+    top:154px;
 }
