--- a/starbucks/css/header.css
+++ b/starbucks/css/header.css
@@ -1,15 +1,21 @@
+
+/* 
+@Filename:starbucks/css/header.css
+@Author: 송웅규
+@Description: starbucks 클론 코딩 <header>하위 요소 css파일
+*/
+
 header {
     width: 100%;
     height: 120px;
     position: fixed;
-    top: 0px;
+    top: 0;
     left: 0;
     background-color: #f6f5ef;
     border-bottom: solid 1px white;
     border-top: solid 2px black;
     z-index:999;
 }
-
 .h-wrap {
     display: flex;
     align-items: center;
@@ -17,21 +23,17 @@ header {
     width: 1100px;
     margin: auto;
 }
-
 .h-logo-wrap {
     width: 75px;
     height: 75px;
     margin-bottom: 1px;
-
 }
-
 .h-logo>a {
     background-image: url(../img/logo.png);
     width: 75px;
     height: 75px;
     display: block;
 }
-
 .h-search-btn {
     border: solid 1px #ccc;
     border-radius: 5px;
@@ -44,7 +46,6 @@ header {
     display: flex;
     align-items: center;
 }
-
 .h-search-icon {
     width: 34px;
     height: 34px;
@@ -53,9 +54,7 @@ header {
     background-repeat: no-repeat;
     background-size: 20px 21px;
     cursor: pointer;
-
 }
-
 .h-search-input {
     transition: width 0.5s;
     border: none;
@@ -65,7 +64,6 @@ header {
     font-size: 12px;
     width: 0px;
 }
-
 .nav-box {
     display: flex;
     flex-direction: column;
