--- a/starbucks/css/main.css
+++ b/starbucks/css/main.css
@@ -1,3 +1,8 @@
+/* 
+@Filename:starbucks/css/main.css
+@Author: 송웅규
+@Description: starbucks 클론 코딩 <main> 하위 요소 css파일
+*/
 main {
     width: 100%;
     height: auto;
@@ -39,7 +44,6 @@ main {
     top: 226px;
     left: 98px;
     font-size: 15px;
-
     opacity: 0;
     transition: background-color 0.5s, opacity 0.7s;
 }
@@ -206,7 +210,7 @@ main {
 }
 
 .reward-inner {
-    width:780px;
+    width: 780px;
     display: flex;
     flex-direction: column;
     color: white;
@@ -230,11 +234,14 @@ main {
 .reward-btn {
     display: flex;
     gap: 10px;
+}
 
+.reward-btn>a:hover {
+    text-decoration: underline;
 }
 
 .reward-inner-top .reward-btn {
-    margin-bottom:10px;
+    margin-bottom: 10px;
 }
 
 .r-join-btn {
@@ -291,4 +298,264 @@ main {
 
 .reward-inner-bottom .reward-text {
     font-size: 14px;
+}
+
+
+
+.blend-banner {
+    width: 100%;
+    height: 573px;
+    background-image: url(../img/blend-bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.blend-wrap {
+    width: 1080px;
+    height: 573px;
+    display: flex;
+    margin: auto;
+    align-items: center;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.blend-desc {
+    display: flex;
+    flex-direction: column;
+    height: 280px;
+    justify-content: space-evenly;
+}
+
+.blend-desc a {
+    display: block;
+    border-radius: 5px;
+    text-align: center;
+    width: 121px;
+    line-height: 34px;
+    height: 34px;
+    border: 2px solid #453d3d;
+    color: #453d3d;
+    background-color: #ffffff00;
+    font-size: 14px;
+    transition: all 0.7s;
+}
+
+.blend-desc a:hover {
+    text-decoration: underline;
+    color: white;
+    background-color: #453d3d;
+}
+
+.news-banner {
+    width: 100%;
+    height: 400px;
+    background-color: #094a3d;
+    position: relative;
+}
+
+.news-bg {
+    width: 100%;
+    height: 400px;
+    background-image: url(../img/news_bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 1999px 400px;
+
+}
+
+.news-inner {
+    width: 1100px;
+    height: 400px;
+    margin: auto;
+    background-image: url(../img/news_title.png);
+    background-repeat: no-repeat;
+    background-position: left 0px center;
+    position: relative;
+    top: -400px;
+}
+
+.news-banner a {
+    position: absolute;
+    top: 257px;
+    left: 371px;
+    border-color: #d5a012;
+    color: #d5a012;
+}
+
+.news-banner a:hover {
+    background-color: #d5a112;
+    color: white;
+}
+
+.fav-banner {
+    width: 100%;
+    height: 800px;
+    background-image: url(../img/fav_bg.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+}
+
+.fav-inner {
+    height: 100%;
+    width: 1280px;
+    margin: auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.fav-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 80px;
+}
+
+.fav-text>div {
+    margin-bottom: 35px;
+
+}
+
+.fav-banner a {
+    border-color: white;
+    color: white;
+}
+
+.fav-banner a:hover {
+    background-color: white;
+    color: black;
+}
+
+
+
+
+
+
+.magazine-banner {
+    width: 100%;
+    height: 400px;
+    background-color: white;
+    background-image: url(../img/magazine_bg.png);
+    background-repeat: no-repeat;
+    background-position: 50% 100%;
+    background-size: auto 353px;
+}
+
+.magazine-inner {
+    width: 1100px;
+    height: 400px;
+    margin: auto;
+    background-image: url(../img/magazine_title.png);
+    background-repeat: no-repeat;
+    background-position: left 55px top 133px;
+    position: relative;
+}
+
+.magazine-banner a {
+    position: absolute;
+    top: 262px;
+    left: 342px;
+    border-color: #000;
+    color: #000;
+}
+
+.magazine-banner a:hover {
+    background-color: #000;
+    color: white;
+}
+
+.magazine-inner img {
+    display: block;
+    margin-left: auto;
+    margin-top: -2px;
+    margin-right: 67px;
+}
+
+
+.store-banner {
+    width: 100%;
+    height: 400px;
+    background-image: url(../img/store_bg.jpg);
+}
+
+.store-inner {
+    width: 1280px;
+    height: 400px;
+    margin: auto;
+    display: flex;
+    background-image: url(../img/store_bg_top.png), url(../img/store_bg_right.png);
+    background-repeat: no-repeat;
+    background-position: top -60px left 55%, bottom 0 right 30px;
+}
+
+
+.store-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.store-text>* {
+    margin-bottom: 10px;
+
+}
+
+.store-img {
+    position: relative;
+    width: 750px;
+}
+
+.store-img>div:first-child {
+    position: absolute;
+    z-index: 1;
+    right: 130px;
+    bottom: 20px;
+
+}
+
+.store-img>div:last-child {
+    position: absolute;
+    left: 160px;
+}
+
+.store-banner a {
+    border-color: #222;
+    color: #222;
+}
+
+.store-banner a:hover {
+    background-color: #222;
+}
+
+
+
+
+
+
+
+
+
+
+.link-btn {
+    display: block;
+    width: 121px;
+    height: 34px;
+    font-size: 15px;
+    line-height: 34px;
+    text-align: center;
+    border-radius: 5px;
+    transition: all 0.7s;
+    border-style: solid;
+    border-width: 2px;
+}
+
+.link-btn:hover {
+    text-decoration: underline;
+    color: white;
 }
